# ChangeLog for net-print/cups
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.279 2007/12/18 20:57:22 tgurr Exp $

*cups-1.3.5 (18 Dec 2007)
*cups-1.2.12-r4 (18 Dec 2007)

  18 Dec 2007; Timo Gurr <tgurr@gentoo.org>
  +files/cups-1.2.12-CVE-2007-5849.patch, +files/pdftops-1.20.gentoo,
  -cups-1.1.23-r8.ebuild, +cups-1.2.12-r4.ebuild, -cups-1.3.4-r3.ebuild,
  +cups-1.3.5.ebuild:
  Add cups ebuilds with security fixes for bug #201042 and bug #201570.
  Cleanup older ones.

  10 Dec 2007; Raúl Porcel <armin76@gentoo.org> cups-1.2.12-r3.ebuild:
  alpha/ia64 stable wrt security #199195

  10 Dec 2007; Ferris McCormick <fmccor@gentoo.org> cups-1.2.12-r3.ebuild:
  Sparc stable --- security Bug #199195

  08 Dec 2007; <welp@gentoo.org> cups-1.2.12-r3.ebuild:
  Stable on amd64 wrt bug 199195

  08 Dec 2007; Jeroen Roovers <jer@gentoo.org> cups-1.2.12-r3.ebuild:
  Stable for HPPA (bug #199195).

  07 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  cups-1.2.12-r3.ebuild:
  ppc stable, bug #199195

  07 Dec 2007; Markus Rothe <corsair@gentoo.org> cups-1.2.12-r3.ebuild:
  Stable on ppc64; bug #199195

  07 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  cups-1.2.12-r3.ebuild:
  stable x86, security bug 199195

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> cups-1.2.12-r2.ebuild:
  Stable on mips, per #196736.

*cups-1.3.4-r3 (16 Nov 2007)
*cups-1.2.12-r3 (16 Nov 2007)

  16 Nov 2007; Timo Gurr <tgurr@gentoo.org>
  +files/cups-1.2.4-CVE-2007-4045.patch,
  +files/cups-1.3.4-CVE-2007-4045.patch, -cups-1.2.12-r1.ebuild,
  +cups-1.2.12-r3.ebuild, -cups-1.3.4-r2.ebuild, +cups-1.3.4-r3.ebuild:
  Revbump adding the patches to fix CVE-2007-4045, see bug #199195. Also
  remove an older vulnerable version.

*cups-1.3.4-r2 (12 Nov 2007)

  12 Nov 2007; Timo Gurr <tgurr@gentoo.org> -cups-1.3.4-r1.ebuild,
  +cups-1.3.4-r2.ebuild: