@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX cups-1.2-str2561-v2.patch 3910 RMD160 461a232b2a0ebc52a83cb729112c0f7d3f3d0ffe SHA1 9b7706a34fd08c32b7911a9f09f02a02c790a77c SHA256 1da64de6358dea65971105530795ffb8d100ddfe5b42c03cdbd815432de219c8
 MD5 5ffb403823adffe5cc5e62082dd08113 files/cups-1.2-str2561-v2.patch 3910
 RMD160 461a232b2a0ebc52a83cb729112c0f7d3f3d0ffe files/cups-1.2-str2561-v2.patch 3910
@@ -49,26 +52,26 @@ EBUILD cups-1.2.10-r1.ebuild 6316 RMD160 396839aec0fe91130450f8c4bdc5df0598a5ae2
 MD5 683374c073f1791ca3bfe1a3447b71f8 cups-1.2.10-r1.ebuild 6316
 RMD160 396839aec0fe91130450f8c4bdc5df0598a5ae29 cups-1.2.10-r1.ebuild 6316
 SHA256 b7dc3e71cd9fa05d9f51274e6c9158ccaf4ad5558de57dbf2b34f1c5cc0de95b cups-1.2.10-r1.ebuild 6316
-EBUILD cups-1.2.12-r2.ebuild 6983 RMD160 c20ee302d0931ef83fc2b5b512d14a8dd405b404 SHA1 dff48f8787dbea2a553e72a7aa4f8dd7d6da5c35 SHA256 a29530931fe35c4c2341442beb2d92f94b3a4a54ae3c8ed028a4d3f24565a745
-MD5 81e5575ddb32b756dd9941287c436600 cups-1.2.12-r2.ebuild 6983
-RMD160 c20ee302d0931ef83fc2b5b512d14a8dd405b404 cups-1.2.12-r2.ebuild 6983
-SHA256 a29530931fe35c4c2341442beb2d92f94b3a4a54ae3c8ed028a4d3f24565a745 cups-1.2.12-r2.ebuild 6983
-EBUILD cups-1.2.12-r3.ebuild 7085 RMD160 d9820681a1094f806094901f1924d3570263ed2d SHA1 7b30b2d523dfb2d6c51db82e4ac0ba145924fa09 SHA256 2917d740364ef5b11cb6bfa9f0fef8b4fbec115f82e0be96dc3d0aa1c3456c01
-MD5 272bca0ff3c90cdd9e42cea733bee70a cups-1.2.12-r3.ebuild 7085
-RMD160 d9820681a1094f806094901f1924d3570263ed2d cups-1.2.12-r3.ebuild 7085
-SHA256 2917d740364ef5b11cb6bfa9f0fef8b4fbec115f82e0be96dc3d0aa1c3456c01 cups-1.2.12-r3.ebuild 7085
-EBUILD cups-1.2.12-r4.ebuild 7052 RMD160 acb4445604dc3bee98bf27902b52159045538283 SHA1 d856e58e8c63b21283f06e3ac386bf6a0ec8c2a3 SHA256 eed1488c959ea5c2f9755d0199a0ddb9cc0494c19249348ff6d4c79dfbe7693c
-MD5 35d965bf7bd1111ef12fa41855e0ba01 cups-1.2.12-r4.ebuild 7052
-RMD160 acb4445604dc3bee98bf27902b52159045538283 cups-1.2.12-r4.ebuild 7052
-SHA256 eed1488c959ea5c2f9755d0199a0ddb9cc0494c19249348ff6d4c79dfbe7693c cups-1.2.12-r4.ebuild 7052
-EBUILD cups-1.3.5.ebuild 8133 RMD160 4eddaed74267ff5ece73d572d35fa9909a9e6f09 SHA1 8b997732b5257f43daef00198688f343a960edae SHA256 51badda769193341fc04ae202c653892de92be38cd8a7a523cabce585d31b415
-MD5 9ac230819c299f28e20251aa0860fb0e cups-1.3.5.ebuild 8133
-RMD160 4eddaed74267ff5ece73d572d35fa9909a9e6f09 cups-1.3.5.ebuild 8133
-SHA256 51badda769193341fc04ae202c653892de92be38cd8a7a523cabce585d31b415 cups-1.3.5.ebuild 8133
-MISC ChangeLog 39756 RMD160 ab491cac57540b69e88fa821d5c3c40e0342cdc4 SHA1 a4e47f6ad247e6bd4c3aeacb1524dc0978b42396 SHA256 30f67a6e27becb75fb6f165928063f7c849534f04222df931a741f422681825e
-MD5 42f3ce371fbd63c18ca76ce571c7a79a ChangeLog 39756
-RMD160 ab491cac57540b69e88fa821d5c3c40e0342cdc4 ChangeLog 39756
-SHA256 30f67a6e27becb75fb6f165928063f7c849534f04222df931a741f422681825e ChangeLog 39756
+EBUILD cups-1.2.12-r2.ebuild 7043 RMD160 c1ffb38d70e0ca1aad824b45f048df68bcba795f SHA1 f0d18352ed1f88991c62aa7304cf1e53c5f5e069 SHA256 d2dcfafe32a6be92483dbc5da7cfd141ee520cf85846c678da087ed21644f0c9
+MD5 522eca7472906f7b9ebf4c6d1283a7ad cups-1.2.12-r2.ebuild 7043
+RMD160 c1ffb38d70e0ca1aad824b45f048df68bcba795f cups-1.2.12-r2.ebuild 7043
+SHA256 d2dcfafe32a6be92483dbc5da7cfd141ee520cf85846c678da087ed21644f0c9 cups-1.2.12-r2.ebuild 7043
+EBUILD cups-1.2.12-r3.ebuild 7142 RMD160 34b23f8b8dd1fc9b7ef1d156ce58a4680371ff45 SHA1 52ba618913f74c86a73c8a4cc0f94cc63c44b000 SHA256 03b9c42b124deb9db5238989f2fa0f9d49f98b9ae9c8dad0d15276a24ff2fcfe
+MD5 f61333dfd55e2fe1e7eeced07ef3f792 cups-1.2.12-r3.ebuild 7142
+RMD160 34b23f8b8dd1fc9b7ef1d156ce58a4680371ff45 cups-1.2.12-r3.ebuild 7142
+SHA256 03b9c42b124deb9db5238989f2fa0f9d49f98b9ae9c8dad0d15276a24ff2fcfe cups-1.2.12-r3.ebuild 7142
+EBUILD cups-1.2.12-r4.ebuild 7111 RMD160 88f73e832c57d35e0a8c3ba225287cb8f597fd60 SHA1 df77cd5c69dce9cfe1cff18c501f1fbf0db58625 SHA256 ca10f96ca08e94950634c829a786fcf6b58ad99cd5a616dc0ffb06e05462811a
+MD5 622914a6044c76a585d626635329ec6b cups-1.2.12-r4.ebuild 7111
+RMD160 88f73e832c57d35e0a8c3ba225287cb8f597fd60 cups-1.2.12-r4.ebuild 7111
+SHA256 ca10f96ca08e94950634c829a786fcf6b58ad99cd5a616dc0ffb06e05462811a cups-1.2.12-r4.ebuild 7111
+EBUILD cups-1.3.5.ebuild 8180 RMD160 c29eccb692f4b9064ff275c310526c7574eea17f SHA1 b2e3481cc0a74c53ede976ed96c06f5cfa9d5dcb SHA256 7693bbafa966b8ad342be1201328f567836ed6a7222574ff2fba9c54978d6986
+MD5 6fb0a734cf4332240ce9df70f186e066 cups-1.3.5.ebuild 8180
+RMD160 c29eccb692f4b9064ff275c310526c7574eea17f cups-1.3.5.ebuild 8180
+SHA256 7693bbafa966b8ad342be1201328f567836ed6a7222574ff2fba9c54978d6986 cups-1.3.5.ebuild 8180
+MISC ChangeLog 40100 RMD160 1938fca29b8c663995e3ae5fd229fb741614dfd1 SHA1 6d64b7799e02fdb36c7e48989002c6b1c2b2c8aa SHA256 d1683e52c7db6bedb2f15e2bff65e4db2fd2c51ab71b775bf126b0c01caef925
+MD5 d79a4986ba7aefbb875d50d39f0376b6 ChangeLog 40100
+RMD160 1938fca29b8c663995e3ae5fd229fb741614dfd1 ChangeLog 40100
+SHA256 d1683e52c7db6bedb2f15e2bff65e4db2fd2c51ab71b775bf126b0c01caef925 ChangeLog 40100
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 metadata.xml 161
@@ -88,3 +91,10 @@ SHA256 1ed8553b6b83c34074f536128d9794fdbd11070a6091353722bb0cc5d4e625df files/di
 MD5 88efa94d4c374e0299645c241a5a0a64 files/digest-cups-1.3.5 259
 RMD160 4859246e4ef85318b2a29d39e1a417c77050ea4e files/digest-cups-1.3.5 259
 SHA256 5d823eb9a6a8897c14afd245230f4d267e77fccc4c9bbc1e41545906e22b5ee7 files/digest-cups-1.3.5 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkdyh6oACgkQoeSe8B0zEfxuKwCeP9pVQoaEvcF5udKUqlb4Y6Md
+9B0AoINPf3A0H6Y/1Cm43Bl2rAZvMGSF
+=hA5K
+-----END PGP SIGNATURE-----
