@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/Attic/cups-1.3.5.ebuild,v 1.1 2007/12/18 20:57:22 tgurr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/Attic/cups-1.3.5.ebuild,v 1.2 2007/12/26 16:55:59 cardoe Exp $
 
 inherit autotools eutils flag-o-matic multilib pam
 
@@ -118,7 +118,10 @@ src_compile() {
 	fi
 
 	export DSOFLAGS="${LDFLAGS}"
-	cd "${S}"
+
+	if use ldap; then
+		append-flags -DLDAP_DEPRECATED
+	fi
 
 	local myconf
 
