@@ -1,6 +1,12 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.279 2007/12/18 20:57:22 tgurr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.280 2007/12/26 16:55:59 cardoe Exp $
+
+  26 Dec 2007; Doug Klima <cardoe@gentoo.org> cups-1.2.12-r2.ebuild,
+  cups-1.2.12-r3.ebuild, cups-1.2.12-r4.ebuild, cups-1.3.5.ebuild:
+  Fix LDAP + CUPS issue once and for all. CUPS used older, deprecated API
+  calls to be compatible with all LDAP implementations out there. You must
+  define LDAP_DEPRECATED so that th headers define them.
 
 *cups-1.3.5 (18 Dec 2007)
 *cups-1.2.12-r4 (18 Dec 2007)
